Adding url to Gallery

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -44,7 +44,7 @@
                     <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Catalyze CU</h4>
-                <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank"><strong>Catalyze CU</strong></a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Framework Miner/Lambda Leaf</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Hearth</strong></a>!<br></p>
+                <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank"><strong>Catalyze CU</strong></a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Framework Miner/Lambda Leaf</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Hearth</strong></a>!<br><br><br></p>
             </div>
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
@@ -52,7 +52,7 @@
                     <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">CU College of Engineering Expo</h4>
-                <p class="text-muted">At the <a href="https://www.colorado.edu/engineering/expo">CU College of Engineering Expo</a April 27, the following teams were given awards for their posters/demos by our panel of judges:<br>
+                <p class="text-muted">At the <a href="http://custartupcapstone.com/CU_Engg_Expo_2017-18/">CU College of Engineering Expo</a April 27, the following teams were given awards for their posters/demos by our panel of judges:<br>
                                       Best Poster: (tie) <a href = "https://www.flatironapp.com/">Flatiron</a> and <a href = "http://www.resonator.life/">Resonance</a><br>
                                       Best Demo: (tie) <a href = "http://appandtaps.com/">AppandTaps</a> and <a href = "http://beautibookapp.com/">Beautibook</a><br>
                                       Best Business: (tie) <a href = "http://appandtaps.com/">AppandTaps</a>, <a href = "http://www.giveandgofilm.com">Give and Go</a>, <a href = "http://lambdaleaf.com/">Lambda Leaf</a><br>
