--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -1,72 +1,19 @@
 <!-- Services Section -->
-    <section id="achievements">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Achievements</h2>
-                    <h3 class="section-subheading text-muted">Accomplishments from the companies in the Capstone this year</h3>
-                    <h4 class="service-heading"><center>New Venture Challenge</center></h4>
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
-                    </span>
-                </div>
-            </div>
-          <center>
-            <div class="col-md-6 text-center">
-
-<!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
-                <p class="text-muted"><h4 class="service-heading">BeautiBook won $5K when placing 3rd place in the NVC Championships</h4>Out of a total of 15 teams from class that competed in the NVC IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br><strong>&bull;  BeautiBook</strong> went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>
-                    <strong>&bull;  Hearth</strong> placed 3rd in the NVC IT Track Finals and was awarded<strong>$750</strong> to further their company<br><strong>&bull;  Ticket Buffs</strong> was awarded<strong>$500</strong> to further their company<br><br><strong>Lambda Leaf</strong> placed 3rd in the NVC Research Track Finals and was awarded<strong>$1000</strong> to further their company.</p>
-            </div>
-
-            <div class="col-md-6 text-center">
-<!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
-
-<!--                <p class="text-muted"><strong>BeautiBook won 3rd place in NVC Championships</strong></p> -->
-                <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won $5K when placing 3rd place in the NVC Championships" width="300" height="400">
-            </div>
-
-          </center>
-
-            <div class="col-md-6 text-center">
+<!-- <section id="achievements">
+    <div class="container">
+        <!-- <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Achievements</h2>
+                <h3 class="section-subheading text-muted">Accomplishments from the companies in the Capstone this year
+                </h3>
+                <h4 class="service-heading">
+                    <center>New Venture Challenge</center>
+                </h4>
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">MD5 Cybersecurity Hackathon</h4>
-                <h5 class="service-heading">Mopsus pitched and demoed their Security Monitoring Suite and won <strong>$15,000</strong> to advance their product in collaboration with MD5 / The DoD.</h5>
             </div>
-
-            <div class="col-md-6 text-center">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">Catalyze CU</h4>
-                <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank"><strong>Catalyze CU</strong></a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Framework Miner/Lambda Leaf</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Hearth</strong></a>!<br><br><br></p>
-            </div>
-            <div class="col-md-6 text-center">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-code fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">CU College of Engineering Expo</h4>
-                <p class="text-muted">At the <a href="http://custartupcapstone.com/CU_Engg_Expo_2017-18/">CU College of Engineering Expo</a April 27, the following teams were given awards for their posters/demos by our panel of judges:<br>
-                                      Best Poster: (tie) <a href = "https://www.flatironapp.com/">Flatiron</a> and <a href = "http://www.resonator.life/">Resonance</a><br>
-                                      Best Demo: (tie) <a href = "http://appandtaps.com/">AppandTaps</a> and <a href = "http://beautibookapp.com/">Beautibook</a><br>
-                                      Best Business: (tie) <a href = "http://appandtaps.com/">AppandTaps</a>, <a href = "http://www.giveandgofilm.com">Give and Go</a>, <a href = "http://lambdaleaf.com/">Lambda Leaf</a><br>
-                                      Best Presentation: <a href = "http://www.resonator.life/">Resonance</a><br>
-                                      Best Technology: <a href = "http://www.powerstats.io/">PowerStats</a><br></p>
-            </div>
-  <!--          <div class="col-md-6 text-center">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">Catalyze CU</h4>
-                <p class="text-muted">Glimpse has been accepted to the equity free <a href="http://catalyzecu.com/" target="_blank">Catalyze CU Accelerator</a> program.</p>
-            </div>
--->
-        </div>
-    </section>
+        </div> 
+    </div>
+</section> -->
