--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
     <div class="previous_years">
         View Previous Years:
+        <a href="http://custartupcapstone.com/2017-2018/" target="_blank"><strong>2017/18</strong></a>&emsp;
         <a href="http://custartupcapstone.com/2016-2017/" target="_blank"><strong>2016/17</strong></a>&emsp;
         <a href="http://custartupcapstone.com/2015-2016/" target="_blank"><strong>2015/16</strong></a>
     </div>
