--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -28,8 +28,6 @@
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
-                </span>
+                <h4 class="service-heading">Boulder Boomtown Accelerator</h4>
+                <p class="text-muted">Congratulations to Chase Dudas and ZeroIn on being admitted to Boulder's Boomtown accelerator.
             </div>
-        </div> 
-    </div>
-</section>
