--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -25,5 +25,5 @@
           </center>
             <div class="col-md-6 text-center">
                 <h4 class="service-heading">Boulder Boomtown Accelerator</h4>
-                <p class="text-muted">Congratulations to Chase Dudas and ZeroIn on being admitted to Boulder's Boomtown accelerator.
+                Congratulations to Chase Dudas and ZeroIn on being admitted to Boulder's Boomtown accelerator.
             </div>
