--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -28,5 +28,7 @@
                 </div>
                 {% endfor %}
             </div>
+            <h4> Joshua Abdulla</h4>
+            <p class="text-muted"> Faculty Member</p>
         </div>
     </section>
