--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -27,8 +27,9 @@
                     </div>
                 </div>
                 {% endfor %}
+                <h4> Joshua Abdulla</h4>
+                <p class="text-muted"> Faculty Member - Department of Computer Science</p>
             </div>
-            <h4> Joshua Abdulla</h4>
-            <p class="text-muted"> Faculty Member</p>
+            
         </div>
     </section>
