--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -27,7 +27,8 @@
                     </div>
                 </div>
                 {% endfor %}
-                <h4> Joshua Abdulla</h4>
+                <div class="col-sm-6 text-center">
+                <h4>Joshua Abdulla</h4>
                 <p class="text-muted"> Faculty Member - Department of Computer Science</p>
             </div>
             
