--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -28,7 +28,7 @@
                 </div>
                 {% endfor %}
                 <div class="col-sm-6 text-center">
-                <p>Joshua Abdulla</p>
+                <h4>Joshua Abdulla</h4>
                 <p class="text-muted"> Faculty Member - Department of Computer Science</p>
             </div>
             
