--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -27,10 +27,13 @@
                     </div>
                 </div>
                 {% endfor %}
+                
+            </div>
+            <div class="row">
                 <div class="col-sm-6 text-center">
                 <h4>Joshua Abdulla</h4>
                 <p class="text-muted"> Faculty Member - Department of Computer Science</p>
-            </div>
             
-        </div>
+                </div>
+            </div>
     </section>
