--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Achievements</h2>
-                    <h3 class="section-subheading text-muted">Accomplishments from the companies in the Capstone the year 2019-2020</h3>
+                    <h3 class="section-subheading text-muted">Accomplishments from the companies in the Capstone for the year 2019-2020</h3>
                     <h4 class="service-heading"><center> CU New Venture Challenge</center></h4>
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
