--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -30,10 +30,10 @@
                 
             </div>
             <div class="row">
-                <div class="col-sm-6 text-center">
-                <img src="img/team/Josh.jpeg" class="img-responsive img-circle" alt="" width="225" height="225">
-                <h4>Joshua Abdulla</h4>
-                <p class="text-muted"> Faculty Member - Department of Computer Science</p>
+                <div class="col-sm-6">
+                    <img src="img/team/Josh.jpeg" class="img-responsive img-circle" alt="" width="225" height="225">
+                    <h4>Joshua Abdulla</h4>
+                    <p class="text-muted"> Faculty Member - Department of Computer Science</p>
             
                 </div>
             </div>
